Fixed tooltip z-index issue with filters. Fixed update filter button placement

--- a/src/components/FilterHeader/FilterHeader.css
+++ b/src/components/FilterHeader/FilterHeader.css
@@ -67,6 +67,7 @@
     max-width: 100vw;
     height: calc(100vh - 131px);
     overflow-y: scroll;
+    z-index: 4;
   }
   .filter {
     min-width: 100%;
